<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".CreateEventActivity">

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/event_text" />-->

    <ImageView
        android:id="@+id/food_image"
        android:layout_width="300dp"
        android:layout_height="112dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:foregroundGravity="bottom">
        <!--
        app:srcCompat="@string/food_image_description"
        android:contentDescription="@string/ui_profile_photo_content_description"
        -->

        <requestFocus />
    </ImageView>

    <EditText
        android:id="@+id/event_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/event_text"
        android:inputType="text" />

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/address_text" />-->

    <EditText
        android:id="@+id/event_food"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/food_text"
        android:inputType="text" />

    <EditText
        android:id="@+id/event_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location_text"
        android:inputType="text" />

    <EditText
        android:id="@+id/event_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address_text"
        android:inputType="text" />

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/food_text" />-->

    <RadioGroup
        android:id="@+id/food_amt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/large_amt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/large_food_amt" />

        <RadioButton
            android:id="@+id/small_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/small_food_amt" />
    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onSubmitClicked"
        android:text="@string/create_text" />


</LinearLayout>